# swapses

./: README.md  SETUP.md  env.example  package-lock.json  package.json
contracts/: .gitignore  01-ZK_IMPLEMENTATION_SUMMARY.md  02-DEPLOYMENT.md  03-README-ZK.md  TODO.md  deploymainnet.sh  deploytestnet.sh  env.example  hardhat.config.ts  package.json
contracts/circuits/: bulletproof_range.circom  mixer.circom  production_mixer.circom  range_proof.circom
contracts/contracts/: AdvancedCommitments.sol  AdvancedObfuscationMixer.sol  AltBn128.sol  AntiTracingMixer.sol  CrossChainBridge.sol  CrossChainPrivacyBridge.sol  EnhancedMixingAlgorithms.sol  EnhancedPrivacyMixer.sol  OptimizedFundMixer.sol  OptimizedOnionRouter.sol  PracticalCrossChainBridge.sol  PracticalDifferentialPrivacy.sol  PracticalFundMixer.sol  PracticalOnionRouter.sol  PracticalQuantumResistant.sol  QuantumResistantMixer.sol  ZKPrivacyMixer.sol  ZKVerifier.sol
contracts/scripts/: deploy-advanced-commitments.ts  deploy-advanced-obfuscation-mixer.ts  deploy-all-networks.ts  deploy-anti-tracing-mixer.ts  deploy-base-mainnet.ts  deploy-base-sepolia.ts  deploy-cross-chain-privacy-bridge.ts  deploy-cross-chain.ts  deploy-differential-privacy.ts  deploy-enhanced-mixing-algorithms.ts  deploy-enhanced-privacy-mixer.ts  deploy-help.ts  deploy-privacy.ts  (+16 more)
mobile-client/: .gitignore  App.tsx  README.md  app.json  eas.json  metro.config.js  package-lock.json  package.json  react-app-env.d.ts  setup-mobile.sh  setup.sh  tsconfig.json
rust-core/: Cargo.toml
rust-core/src/: bip39.rs  hd_wallet.rs  lib.rs  utils.rs
(+43 files in other folders)
